--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
   },
   "homepage": "https://github.com/ielo03/web-dev-final#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "xss": "^1.0.14"
   }
 }
