--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "My web development class final project",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -33,11 +33,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
-    "express": "^4.18.2",
+    "express": "5.0.0",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
+    "mongoose": "8.7.1",
     "xss": "^1.0.14"
   }
 }
