--- a/package.json
+++ b/package.json
@@ -33,11 +33,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
-    "express": "5.0.0",
+    "express": "^5.0.1",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
-    "mongodb": "^6.3.0",
-    "mongoose": "8.7.1",
     "xss": "^1.0.14"
   }
 }
