--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "google-auth-library": "^9.15.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.12.0",
     "xss": "^1.0.14"
   }
 }
