--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/ielo03/web-dev-final#readme",
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.734.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
@@ -39,6 +40,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "google-auth-library": "^9.15.0",
+    "json5": "^2.2.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "xss": "^1.0.14"
